Upload featuretypes (#34)
* Upload featuretypes

* Correcting misspelled

* Correcting unit tests

* Code smell
