# docs/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: PlatIAgro Datasets API
-  version: "0.0.2"
+  version: "0.1.0"
   description: >
     These are the docs for PlatIAgro Datasets API.
     The endpoints below are usually accessed by the PlatIAgro Web-UI.
@@ -59,6 +59,27 @@ paths:
           $ref: "#/components/responses/Dataset"
         "404":
           $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+        "503":
+          $ref: "#/components/responses/ServiceUnavailable"
+    patch:
+      summary: "Update dataset featuretypes."
+      tags:
+        - "Datasets"
+      parameters:
+        - name: name
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        $ref: "#/components/requestBodies/Featuretypes"
+      responses:
+        "200":
+          $ref: "#/components/responses/Dataset"
+        "400":
+          $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
         "503":
@@ -172,9 +193,6 @@ components:
               file:
                 type: string
                 format: binary
-              featuretypes:
-                type: string
-                format: binary
     Column:
       content:
         application/json:
@@ -184,6 +202,15 @@ components:
               featuretype:
                 type: string
                 enum: [Numerical, Categorical, DateTime]
+    Featuretypes:
+      content:
+        multipart/form-data:
+          schema:
+            type: object
+            properties:
+              featuretypes:
+                type: string
+                format: binary
   responses:
     Dataset:
       description: ""
